--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,24 +9,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Gallery</title>
 </head>
+
 <body>
 
     <header>
         <div class="header">
             <nav>
                 <div class="texto">
-    
+
                     <h1>Welcome to IA gallery</h1>
-                    <h4>All rights reserved, if you feel that IA take a piece of your artwork please comunicate me and I will erase it totally.</h4>
-    
+                    <h4>All rights reserved, if you feel that IA take a piece of your artwork please comunicate me and I
+                        will erase it totally.</h4>
+
                 </div>
             </nav>
         </div>
     </header>
 
-    <main>  
+    <main>
         <div class="galeria">
             <div class="grid"></div>
         </div>
@@ -47,10 +51,17 @@
         </div>
         <div class="fc-2">
             <h1>Remenber...</h1>
-            <h1>All content here was created by IA, if you have any issue with copyright, just contact me via e-mail.</h1>
+            <h1>All content here was created by IA, if you have any issue with copyright, just contact me via e-mail.
+            </h1>
         </div>
     </footer>
 
     <script src="js/Rigel.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+        AOS.init();
+    </script>
 </body>
+
 </html>
