Fixing some things

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Gallery</title>
 </head>
 
-<body>
+<body data-aos="fade-down">
 
     <header>
         <div class="header">
@@ -60,7 +60,10 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <script>
-        AOS.init();
+        AOS.init({
+            duration: 800,
+            easing: 'ease'
+        });
     </script>
 </body>
 
