--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
     </footer>
 
-    <script src="js/Rigel.js"></script>
+    <script src="js/Rigel_2.0.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <script>
