--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </main>
 
-    <footer>
+    <footer data-aos="fade-up">
         <div class="fc-1">
             <h1>
                 About the creator of this page:
